--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-Hello world.
+<a href="javascript:(function(){document.body.appendChild(document.createElement('script')).src='/cb-bookmarklet.js';})();">Externalized Bookmarklet</a>
