--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<a href="javascript:(function(){document.body.appendChild(document.createElement('script')).src='/cb-bookmarklet/cb-bookmarklet.js';})();">Externalized Bookmarklet</a>
+<a href="javascript:(function(){document.body.appendChild(document.createElement('script')).src='//tjsavage.github.io/cb-bookmarklet/cb-bookmarklet.js';})();">Externalized Bookmarklet</a>
